--- a/kacagiderim_beta/kacagiderim_beta/Base.lproj/Main.storyboard
+++ b/kacagiderim_beta/kacagiderim_beta/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="K6w-Si-hfR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="K6w-Si-hfR">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -37,7 +37,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="0bU-AE-Saa">
-                                <rect key="frame" x="50" y="208.66666666666666" width="275" height="395.33333333333337"/>
+                                <rect key="frame" x="50" y="178.66666666666666" width="275" height="455.33333333333337"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_main_logo" translatesAutoresizingMaskIntoConstraints="NO" id="04f-x8-kVx">
                                         <rect key="frame" x="0.0" y="0.0" width="275" height="150"/>
@@ -121,6 +121,13 @@
                                             <action selector="didForgotPasswodTappedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bK2-Lh-56E"/>
                                         </connections>
                                     </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lfD-YJ-p03" customClass="NVActivityIndicatorView" customModule="NVActivityIndicatorView">
+                                        <rect key="frame" x="0.0" y="405.33333333333337" width="275" height="50"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="typeName" value="lineScale"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tVu-gr-WLK" customClass="DCBorderedButton" customModule="DCKit">
@@ -171,6 +178,7 @@
                         <outlet property="emailErrorLabel" destination="jAb-gV-hcE" id="oUn-uG-KhU"/>
                         <outlet property="emailField" destination="3cv-tL-rWR" id="LC5-8F-OTT"/>
                         <outlet property="forgotPasswordButton" destination="kN7-TQ-pAJ" id="wva-ML-Ckb"/>
+                        <outlet property="loadingIndicator" destination="lfD-YJ-p03" id="6SE-F2-CKc"/>
                         <outlet property="passwordErrorLabel" destination="bUS-TA-gO7" id="XcQ-oC-cEI"/>
                         <outlet property="passwordField" destination="mhb-jG-ume" id="TM3-vq-SKc"/>
                         <outlet property="signInButton" destination="tVu-gr-WLK" id="543-Fu-DHY"/>
@@ -179,7 +187,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="711" y="-201"/>
+            <point key="canvasLocation" x="709.60000000000002" y="-201.72413793103451"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="QDA-qp-Mg5">
@@ -308,7 +316,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="WzD-qF-3CD">
-                                <rect key="frame" x="50" y="179" width="275" height="455"/>
+                                <rect key="frame" x="50" y="149" width="275" height="515"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_main_logo" translatesAutoresizingMaskIntoConstraints="NO" id="oUe-x1-cvV">
                                         <rect key="frame" x="0.0" y="0.0" width="275" height="150"/>
@@ -377,7 +385,7 @@
                                         </connections>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password Validation Error Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nQz-f0-Gc4">
-                                        <rect key="frame" x="0.0" y="337.66666666666663" width="275" height="15.666666666666686"/>
+                                        <rect key="frame" x="0.0" y="337.66666666666669" width="275" height="15.666666666666686"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -415,6 +423,13 @@
                                         <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IMN-Q6-4w6" customClass="NVActivityIndicatorView" customModule="NVActivityIndicatorView">
+                                        <rect key="frame" x="0.0" y="465" width="275" height="50"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="typeName" value="lineScale"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QdC-Za-d2M" customClass="DCBorderedButton" customModule="DCKit">
@@ -470,6 +485,7 @@
                         <outlet property="createAccountButton" destination="QdC-Za-d2M" id="6ME-0T-h23"/>
                         <outlet property="emailErrorLabel" destination="fIo-re-7A7" id="rim-rl-AVg"/>
                         <outlet property="emailField" destination="NWV-ve-Pgh" id="tOD-8O-wx5"/>
+                        <outlet property="loadingIndicator" destination="IMN-Q6-4w6" id="5nT-oB-wng"/>
                         <outlet property="passwordErrorLabel" destination="nQz-f0-Gc4" id="GYU-Yh-bmA"/>
                         <outlet property="passwordField" destination="oac-Ti-Eom" id="jUH-VO-VbE"/>
                     </connections>
