--- a/kacagiderim_beta/kacagiderim_beta/SearchVehicleRootVC.storyboard
+++ b/kacagiderim_beta/kacagiderim_beta/SearchVehicleRootVC.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--New VehicleVC-->
+        <!--Search Vehicle RootVC-->
         <scene sceneID="Af9-nb-NAb">
             <objects>
-                <viewController storyboardIdentifier="NewVehicleCreate" id="GEH-BN-rB5" customClass="NewVehicleVC" customModule="kacagiderim_beta" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SearchVehicle" id="GEH-BN-rB5" customClass="SearchVehicleRootVC" customModule="kacagiderim_beta" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="uDG-VI-ZQG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
